css/styles.css
/* ... */
@font-face {
    font-family: 'Roboto';
    src: url('../fonts/Roboto-BlackItalic-webfont.eot');
    src: url('../fonts/Roboto-BlackItalic-webfont.eot?#iefix') format('embedded-opentype'),url('../fonts/Roboto-BlackItalic-webfont.woff') format('woff'),url('../fonts/Roboto-BlackItalic-webfont.ttf') format('truetype'),url('../fonts/Roboto-BlackItalic-webfont.svg#robotoblack_italic') format('svg');
    font-weight: 900;
    font-style: italic;
}

@font-face {
    font-family: 'Roboto';
    src: url('../fonts/Roboto-Black-webfont.eot');
    src: url('../fonts/Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),url('../fonts/Roboto-Black-webfont.woff') format('woff'),url('../fonts/Roboto-Black-webfont.ttf') format('truetype'),url('../fonts/Roboto-Black-webfont.svg#robotoblack') format('svg');
    font-weight: 900;
    font-style: normal;
}

.content_container .post_nav:after {
    content: "";
    display: table;
    clear: both;
}

.video_container iframe, .head .row .logo svg {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
}

.content, .authorbox .avatar {
    display: block;
    position: relative;
    margin: 0px auto;
}

html, body {
    font-family: "Roboto","Calibri","Arial",sans-serif;
    font-size: 20px;
    font-weight: 300;
    color: 900;
}

body {
    line-height: 1.5;
    background-color: #e9f5f3;
    background-attachment: fixed;
    background-position: center;
    background-repeat: repeat;
    -webkit-transition: 0.3s all ease-in-out;
    transition: 0.3s all ease-in-out;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
    text-transform: none;
    line-height: 1;
    padding-top: 10px;
}

h1 {
    font-size: 2.1em;
}

h2 {
    font-size: 1.6em;
}

h3 {
    font-size: 1.2em;
}

h4 {
    font-size: 1em;
}

h5 {
    font-size: 0.83em;
}

h6 {
    font-size: 0.75em;
}

a {
    -webkit-transition: 0.3s all;
    transition: 0.3s all;
    color: #75535F;
    text-decoration: underline;
}

    a:hover {
        transition: 0.3s all;
        color: #505879;
        text-decoration: none;
    }

    a.noline, nav a {
        text-decoration: none;
    }

img {
    max-width: 100%;
}

iframe {
    width: 100%;
    height: auto;
}

.video_container {
    position: relative;
    width: 100%;
    height: 0;
    padding: 56.25% 0 0 0;
}

.content {
    width: 90%;
    max-width: 1500px;
}

.margin {
    padding-top: 50px;
    width: 100%;
}

    .margin .content {
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-flex-direction: row;
        -ms-flex-direction: row;
        flex-direction: row;
        -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
        justify-content: space-between;
        -webkit-align-items: stretch;
        -ms-flex-align: stretch;
        align-items: stretch;
    }

@media screen and (max-width: 1330px) {
    .margin .content {
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        -webkit-justify-content: flex-start;
        -ms-flex-pack: start;
        justify-content: flex-start;
        -webkit-align-items: center;
        -ms-flex-align: center;
        align-items: center;
    }
}

.error {
    width: 100%;
    margin-bottom: 20px;
    padding: 10px;
    box-sizing: border-box;
    background: #FDFDFD;
    border: 1px solid #E6DED6;
}

blockquote {
    margin-left: 5%;
    padding: 10px;
    box-sizing: border-box;
    border-left: 1px solid #E6DED6;
}

code {
    font-family: 'Source Code Pro','Courier New',monospace;
}

.featimg {
    width: 100%;
}

@media screen and (max-width: 368px) {
    .iconnav .tumblr, .iconnav .instagram, .iconnav .twitter, .iconnav .youtube {
        display: none;
    }
}

.iconnav ul {
    list-style: none;
}

    .iconnav ul li {
        list-style: none;
        display: inline-block;
    }

        .iconnav ul li a {
            padding: 0 3px;
        }

body.overflow {
    overflow: hidden;
}

#search {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    -webkit-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
    -webkit-transform: translate(0px, -100%) scale(0, 0);
    -ms-transform: translate(0px, -100%) scale(0, 0);
    transform: translate(0px, -100%) scale(0, 0);
    opacity: 0;
    display: none;
}

    #search input[type="search"] {
        position: absolute;
        top: 50%;
        left: 50%;
        -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
        color: black;
        background: transparent;
        font-size: 3em;
        font-weight: 300;
        text-align: center;
        border: 0px;
        outline: none;
    }

    #search.open {
        -webkit-transition: 0.5s ease-in-out;
        transition: 0.5s ease-in-out;
        -webkit-transform: translate(0px, 0px) scale(1, 1);
        -ms-transform: translate(0px, 0px) scale(1, 1);
        transform: translate(0px, 0px) scale(1, 1);
        opacity: 1;
        z-index: 106;
        display: block;
    }
/* ... */

